// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note component > renders with close button 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-success ds:text-primary-gray ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    >
      <button
        aria-label="Close"
        class="ds:cursor-pointer ds:flex"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.4 19.2964L5 17.8964L10.6 12.2964L5 6.69639L6.4 5.29639L12 10.8964L17.6 5.29639L19 6.69639L13.4 12.2964L19 17.8964L17.6 19.2964L12 13.6964L6.4 19.2964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Note component > renders with default variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-success ds:text-primary-gray ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    />
  </div>
</div>
`;

exports[`Note component > renders with error variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-alert ds:text-white ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    />
  </div>
</div>
`;

exports[`Note component > renders with read more component 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-success ds:text-primary-gray ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
      <span
        class="ds:mt-3"
      >
        Read more
      </span>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    />
  </div>
</div>
`;

exports[`Note component > renders with success variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-success ds:text-primary-gray ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    />
  </div>
</div>
`;

exports[`Note component > renders with warning variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:transition-all ds:delay-75 ds:overflow-clip ds:bg-warning ds:text-primary-gray ds:px-5 ds:py-3 ds:sm:py-2 ds:md:py-1 ds:lg:py-0 ds:h-8"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-8 ds:items-center ds:justify-center ds:gap-6"
  >
    <div
      class="ds:flex ds:flex-col ds:sm:flex-row ds:flex-wrap ds:sm:items-center ds:sm:gap-x-6"
    >
      <div
        class="ds:text-heading-4 ds:text-pretty"
      >
        Test Title
      </div>
      <div
        class="ds:text-body-md ds:font-arial ds:text-pretty"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:sm:items-center ds:gap-6 ds:not-sm:self-start"
    />
  </div>
</div>
`;
